@@ -35,14 +35,20 @@ Detailed Change List
 --------------------
 
 New Features
+ 1.
 
 Changes in runtime behavior
+ 1.
 
 Optimizations 
+ 1.
 
 Bug Fixes
-
+ 1. SOLR-87: Parsing of synonym files did not correctly handle escaped
+    whitespace such as \r\n\t\b\f. (yonik)
+  
 Other Changes
+ 1.
 
 ================== Release 1.1.0, YYYYMMDD ==================
 
